tests/neg/i4371b.scala
object App {
  type T[G[X] <: X, F[X] <: G[F[X]]] // error: Recursion limit exceeded. Maybe there is an illegal cyclic reference? ...
}
